cria o primeiro prototipo da api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,29 @@
+# docker-compose.yml
+version: '3.8'
 
+services:
+  mlflow:
+    image: python:3.10-slim
+    command: bash -c "pip install mlflow && mlflow server --host 0.0.0.0 --port 5000"
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./mlruns:/mlruns
+  
+  api:
+    build: .
+    command: uvicorn src.api.main:app --host 0.0.0.0 --port 8000
+    ports:
+      - "8000:8000"
+    depends_on:
+      - mlflow
+    environment:
+      - MLFLOW_TRACKING_URI=http://mlflow:5000
+  
+  streamlit:
+    build: .
+    command: streamlit run app/streamlit_app.py --server.port 8501
+    ports:
+      - "8501:8501"
+    depends_on:
+      - api
