--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ xgboost==2.0.0
 lightgbm==4.1.0
 
 # MLflow
-mlflow==2.8.0
+mlflow>=2.8.0
 boto3==1.28.0
 
 # Agents & LLM
@@ -27,3 +27,7 @@ requests==2.31.0
 
 pandas
 numpy
+
+streamlit>=1.28.0
+plotly>=5.17.0
+requests>=2.31.0
