update the docker files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,128 @@
-# docker-compose.yml
 version: '3.8'
 
 services:
+  # ============================================================================
+  # MLflow Tracking Server
+  # ============================================================================
   mlflow:
     image: python:3.10-slim
-    command: bash -c "pip install mlflow && mlflow server --host 0.0.0.0 --port 5000"
+    container_name: nexocommerce-mlflow
+    command: >
+      bash -c "
+        pip install --no-cache-dir mlflow boto3 psycopg2-binary &&
+        mlflow server 
+          --host 0.0.0.0 
+          --port 5000 
+          --backend-store-uri file:///mlruns
+          --default-artifact-root /mlruns
+      "
     ports:
       - "5000:5000"
     volumes:
       - ./mlruns:/mlruns
-  
+      - ./artifacts:/artifacts
+    networks:
+      - nexocommerce-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    restart: unless-stopped
+
+  # ============================================================================
+  # FastAPI Backend
+  # ============================================================================
   api:
-    build: .
-    command: uvicorn src.api.main:app --host 0.0.0.0 --port 8000
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: nexocommerce-api
+    command: >
+      uvicorn src.api.main:app 
+        --host 0.0.0.0 
+        --port 8000 
+        --reload
     ports:
       - "8000:8000"
-    depends_on:
-      - mlflow
+    volumes:
+      - ./src:/app/src
+      - ./models:/app/models
+      - ./data:/app/data
+      - ./mlruns:/app/mlruns
     environment:
       - MLFLOW_TRACKING_URI=http://mlflow:5000
-  
+      - MODEL_PATH=/app/models/product_lifecycle_model.pkl
+      - PYTHONUNBUFFERED=1
+      - KAGGLE_USERNAME=${KAGGLE_USERNAME:-}
+      - KAGGLE_KEY=${KAGGLE_KEY:-}
+    depends_on:
+      mlflow:
+        condition: service_healthy
+    networks:
+      - nexocommerce-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    restart: unless-stopped
+
+  # ============================================================================
+  # Streamlit UI
+  # ============================================================================
   streamlit:
-    build: .
-    command: streamlit run app/streamlit_app.py --server.port 8501
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: nexocommerce-streamlit
+    command: >
+      streamlit run app/streamlit_app.py 
+        --server.port 8501 
+        --server.address 0.0.0.0
+        --server.headless true
+        --browser.gatherUsageStats false
     ports:
       - "8501:8501"
+    volumes:
+      - ./app:/app/app
+      - ./src:/app/src
+      - ./models:/app/models
+      - ./data:/app/data
+    environment:
+      - API_URL=http://api:8000
+      - MLFLOW_TRACKING_URI=http://mlflow:5000
+      - PYTHONUNBUFFERED=1
     depends_on:
-      - api
+      api:
+        condition: service_healthy
+    networks:
+      - nexocommerce-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8501/_stcore/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    restart: unless-stopped
+
+# ============================================================================
+# Networks
+# ============================================================================
+networks:
+  nexocommerce-network:
+    driver: bridge
+    name: nexocommerce-network
+
+# ============================================================================
+# Volumes (opcional - para persistência)
+# ============================================================================
+volumes:
+  mlruns-data:
+    driver: local
+  models-data:
+    driver: local
+  data-storage:
+    driver: local
